Fix T52190: Depth picking fails